<resources>
    <string name="app_name">InvestorsCalculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Investors Calculator</string>
    <string name="nav_header_subtitle">georgi.jelev94@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Buy to Rent</string>
    <string name="menu_gallery">HMO</string>
    <string name="menu_slideshow">Tips</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="zero">0</string>
    <string name="anual_profit">Anual profit</string>
    <string name="calculate_it">Calculate !</string>
    <string name="mortage">Mortage</string>
    <string name="house_rent">house Rent</string>
    <string name="expences">Expences</string>
    <string name="house_price">House Price</string>
    <string name="roi">ROI</string>
    <string name="investment_percent">investment percent</string>
    <string name="house_tax_percent">house TAX percent</string>
    <string name="maintenance_percent">maintenance percent</string>
    <string name="reinovation_percent">reinovation percent</string>
    <string name="management_percent">management percent</string>
    <string name="percent">%</string>
</resources>
